fixed navbar div taking up too much space up top which caused scrolling and interaction issues

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -9,21 +9,17 @@ html, body {
 
 /* //////////////////////////////////////  NAVBAR  ////////////////////////////////////// */
 
-.Navbar-Container {
+.Navbar-Container-Left {
   position: absolute;
-  height: 50px;
+  height: 80px;
+  /* border: solid 2px red; */
 }
-.Navbar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-wrap: nowrap;
-  position: sticky;
-  top: 0;
-  z-index: 4;
-  text-decoration: none;
-  width: 100vw;
-  height: 100px;
+
+.Navbar-Container-Right {
+  position: absolute;
+  right: 0;
+  height: 80px;
+  /* border: solid 2px red; */
 }
 
 a {
@@ -34,10 +30,12 @@ a {
 }
 
 .Navbar-Search-Box {
-  width: 50vw;
+  position: sticky;
+  z-index: 4;
+  top: 30px;
   margin: 0;
   padding: 0;
-    margin-left: 50px;
+  margin-left: 50px;
   /* border: 2px solid magenta; */
 }
 
@@ -51,22 +49,13 @@ a {
   /* margin-left: 50px; */
 }
 
-.Navbar-Search-Hover {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 800;
-  font-size: 1.5rem;
-  color: #000000;
-  margin-left: 50px;
-  cursor: pointer;
-}
-
 .Navbar-Browse-Box {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-wrap: nowrap;
-  width: 50vw;
-  float: right;
+  position: sticky;
+  z-index: 4;
+  top: 30px;
+  margin: 0;
+  padding: 0;
+  margin-right: 50px;
   /* border: 2px solid yellow; */
 }
 
@@ -74,12 +63,7 @@ a {
   float: right;
   cursor: pointer;
   color: #fff;
-  
 }
-
-/* .Navbar-Browse-Arrow:hover {
-  padding-left: 20px;
-} */
 
 /* //////////////////////////////////////  RETURN TO TOP ARROW  ////////////////////////////////////// */
 
